Database Setup using Default Identity Migrations Team connection strings are ready to go with commits _Layout page update with 3 party builds. (Font-Awesome, etc...)

--- a/VMS/appsettings.json
+++ b/VMS/appsettings.json
@@ -1,7 +1,28 @@
 {
+  /*Justin's Connection String - Do Not Delete! Just commit out*/
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-VMS-22E7E328-3F56-45C2-BB17-CA6ECD58F2C0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=PARAGON;Database=VMS;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+
+  /*/*Lital's Connection String - Do Not Delete! Just commit out#1#
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(Your Home Server);Database=VMS;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
+  /*Camille's Connection String - Do Not Delete! Just commit out#1#
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(Your Home Server);Database=VMS;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
+
+  /*Mervens Connection String - Do Not Delete! Just commit out#1#
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(Your Home Server);Database=VMS;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },*/
+
+
+  
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
