Updated all volunteer data and update setting for db during the run.

--- a/VMS.DataAccess/VMS.DataAccess.csproj
+++ b/VMS.DataAccess/VMS.DataAccess.csproj
@@ -9,6 +9,8 @@
     <Compile Remove="Migrations\20200714172013_LoginViewModel.Designer.cs" />
     <Compile Remove="Migrations\20200714195920_AddVolunteerToDb.cs" />
     <Compile Remove="Migrations\20200714195920_AddVolunteerToDb.Designer.cs" />
+    <Compile Remove="Migrations\20200715153559_AddVolunteerToDb.cs" />
+    <Compile Remove="Migrations\20200715153559_AddVolunteerToDb.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
