All Volunteer Db tables are set as well as Opportunity Repositorys and Interfaces. Gong to wait on Lital to be sure she can filter based on the ID in the database before I add a migration.

--- a/VMS.DataAccess/VMS.DataAccess.csproj
+++ b/VMS.DataAccess/VMS.DataAccess.csproj
@@ -11,6 +11,10 @@
     <Compile Remove="Migrations\20200714195920_AddVolunteerToDb.Designer.cs" />
     <Compile Remove="Migrations\20200715153559_AddVolunteerToDb.cs" />
     <Compile Remove="Migrations\20200715153559_AddVolunteerToDb.Designer.cs" />
+    <Compile Remove="Migrations\20200715160058_AddOpportunityToDb.cs" />
+    <Compile Remove="Migrations\20200715160058_AddOpportunityToDb.Designer.cs" />
+    <Compile Remove="Migrations\20200715160231_AddOpportunityToDb.cs" />
+    <Compile Remove="Migrations\20200715160231_AddOpportunityToDb.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
