I fixed the Edit button and  the “unreachable code problem”. These issues were related.

--- a/VMS/appsettings.json
+++ b/VMS/appsettings.json
@@ -1,10 +1,10 @@
 {
-  /*Justin's Connection String - Do Not Delete! Just commit out*/
+/*Justin's Connection String - Do Not Delete! Just commit out
   "ConnectionStrings": {
     "DefaultConnection": "Server=PARAGON;Database=VMS;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+  },*/
 
-  /*/*Lital's Connection String - Do Not Delete! Just commit out#1#
+/*/*Lital's Connection String - Do Not Delete! Just commit out#1#
   "ConnectionStrings": {
     "DefaultConnection": "Server=(Your Home Server);Database=VMS;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
@@ -15,20 +15,13 @@
   },
 
 
-  /*Mervens Connection String - Do Not Delete! Just commit out#1#
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(Your Home Server);Database=VMS;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },*/
-
-
-  
-
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
-}
+  /*Mervens Connection String - Do Not Delete! Just commit out#1#*/
+"ConnectionStrings": {
+  "DefaultConnection": "Server=LAPTOP-99GCKNC8;Database=VMS;Trusted_Connection=True;MultipleActiveResultSets=true"
+}, "Logging": {
+  "LogLevel": {
+    "Default": "Information",
+    "Microsoft": "Warning",
+    "Microsoft.Hosting.Lifetime": "Information"
+  }
+}, "AllowedHosts": "*" }
