commented out my server

--- a/VMS/appsettings.json
+++ b/VMS/appsettings.json
@@ -15,10 +15,13 @@
   },
 
 
-  /*Mervens Connection String - Do Not Delete! Just commit out#1#*/
+  /*Mervens Connection String - Do Not Delete! Just commit out#1#
 "ConnectionStrings": {
-  "DefaultConnection": "Server=LAPTOP-99GCKNC8;Database=VMS;Trusted_Connection=True;MultipleActiveResultSets=true"
-}, "Logging": {
+  "DefaultConnection": "Server=(Your Home Server);Database=VMS;Trusted_Connection=True;MultipleActiveResultSets=true"
+}, */
+  
+  
+  "Logging": {
   "LogLevel": {
     "Default": "Information",
     "Microsoft": "Warning",
