--- a/VMS/appsettings.json
+++ b/VMS/appsettings.json
@@ -1,8 +1,8 @@
 {
-/*Justin's Connection String - Do Not Delete! Just commit out
+//Justin's Connection String - Do Not Delete! Just commit out
   "ConnectionStrings": {
     "DefaultConnection": "Server=PARAGON;Database=VMS;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },*/
+  },
 
 /*/*Lital's Connection String - Do Not Delete! Just commit out#1#
   "ConnectionStrings": {
