removed a commit - I forgot to send this up with the rest

--- a/VMS/appsettings.json
+++ b/VMS/appsettings.json
@@ -1,7 +1,7 @@
 {
 //Justin's Connection String - Do Not Delete! Just commit out
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PARAGON;Database=VMS;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=ULTIMA;Database=VMS;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
 /*/*Lital's Connection String - Do Not Delete! Just commit out#1#
